<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAddEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAddEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".activity.AddAndEditActivity">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/habitNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/habit_name"
                    android:textColorHint="@color/colorPrimaryCustom"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/habitNameAddAndEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/habitDescriptionInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/description"
                    android:textColorHint="@color/colorPrimaryCustom"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitNameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/habitDescriptionAddAndEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/habitPriorityInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/priority"
                    android:textColorHint="@color/colorPrimaryCustom"
                    app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitDescriptionInputLayout">

                    <AutoCompleteTextView
                        android:id="@+id/habitPriorityAddAndEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/radioButtonGood"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.93"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitDescriptionInputLayout">

                    <RadioButton
                        android:id="@+id/radioButtonGood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryCustom"
                        android:fontFamily="@font/roboto_mono"
                        android:text="@string/good_habit" />

                    <RadioButton
                        android:id="@+id/radioButtonBad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryCustom"
                        android:fontFamily="@font/roboto_mono"
                        android:text="@string/bad_habit" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/habitPeriodInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/period"
                    android:textColorHint="@color/colorPrimaryCustom"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/habitPriorityInputLayout"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                    <AutoCompleteTextView
                        android:id="@+id/habitPeriodAddAndEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/habitDoneInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/Count"
                    android:textColorHint="@color/colorPrimaryCustom"
                    app:layout_constraintBottom_toBottomOf="@+id/habitPeriodInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.42"
                    app:layout_constraintStart_toEndOf="@+id/habitPeriodInputLayout"
                    app:layout_constraintTop_toTopOf="@+id/habitPeriodInputLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/habitDoneAddEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/colorPickerButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Выбрать цвет"
                    android:textColor="@android:color/tertiary_text_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/habitPeriodInputLayout"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/curColorImageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/colorPickerButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/colorPickerButton"
                    app:layout_constraintTop_toTopOf="@+id/colorPickerButton"
                    app:srcCompat="@drawable/color_viewer_element" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



    </LinearLayout>








</FrameLayout>
